# infra-ai-monitoring

./: .gitignore  README.md  pyproject.toml
src/infra_monitor/: __init__.py  cli.py  collector.py  models.py  storage.py
src/infra_monitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_collector.py  test_models.py  test_storage.py
