[project]
name = "infra-monitor"
version = "0.1.0"
description = "Infrastructure AI Monitoring Platform - metrics collection, storage, and (later) anomaly detection."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psutil>=5.9",
]

[project.scripts]
infra-monitor = "infra_monitor.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
